# treecode

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  tox.ini  treecode.py
tests/: test_treecode.py
treecode/: __init__.py  __main__.py  main.py
