[tool.poetry]
name = "treecode"
version = "0.1.0"
description = "Treecode images to text!"
authors = ["Cole Mackenzie <colemackenzie1@gmail.com>"]
license = "Apache License 2.0"
readme = 'README.md'
repository = "https://github.com/cmackenzie1/treecode"
homepage = "https://github.com/cmackenzie1/treecode"

keywords = ["rekognition", "tentree", "treecode", "ocr"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.14.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
tox = "^3.15.2"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"